...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkRPG"
        android:checked="false"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkADVENTURE"
        android:checked="false"
        android:layout_marginStart="33dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/checkRPG" />

    <CheckBox
...
