<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <SearchView
        android:textAllCaps="false"
        android:id="@+id/searchbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search..."
        android:layout_gravity="center_horizontal" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alphabetize"
        android:id="@+id/checkBoxSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp" />

    <ListView
        android:textAllCaps="false"
        android:id="@+id/list_viewsearch"
        android:layout_below="@+id/searchbar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay" />

</LinearLayout>


