<?xml version="1.0" encoding="utf-8"?>
<searchable
    xmlns:andriod="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/tools"
    android:label="Search"
    android:id="@+id/searchable"
    andriod:hint="Search Game"
    andriod:layout_height="35dp"
    andriod:layout_width="100dp">

</searchable>

