<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true" >

    <ListView
        android:id="@+id/list_thismonth"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:drawSelectorOnTop="true"
        android:scrollbarStyle="outsideOverlay"
        android:layout_below="@+id/releasedthismonth"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="left"
        android:textSize="50dp"
        android:id="@+id/releasedthismonth"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:layout_above="@+id/list_thismonth"
        android:layout_alignParentStart="true"
        android:layout_marginStart="237dp" />

</RelativeLayout>