<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="names">Game Watcher!</string>
    <string name="action_settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="suggested">Suggested</string>
    <string name="thismonth">Upcoming</string>
    <string name="suggestedgames">Suggested Games</string>
    <string name="searchforgame">Search For Game</string>
    <string name="mostpopular">Most Popular</string>
    <string name="product">Product</string>
    <string name="generic">Generic</string>
    <string name="currpop">Current Popular Games</string>
</resources>
